# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2019-12-07 Michael Truog   <mjtruog at protonmail dot com>

    * Add suspend-related information to the CloudI Service API
      services_status output:
      suspended,
      uptime_processing,
      interrupt_day_suspended,
      interrupt_week_suspended,
      interrupt_month_suspended,
      interrupt_year_suspended,
      availability_day_processing,
      availability_week_processing,
      availability_month_processing,
      availability_year_processing
    * Fix cloudi_service_map_reduce execution time tracking to
      exclude time spent suspended with cloudi_service_map_reduce:suspend/2,3
    * Fix cloudi_service_test_hexpi max timeout used

2019-12-06 Michael Truog   <mjtruog at protonmail dot com>

    * Put cloudi_service_map_reduce name argument into log output
      when suspend/resume occurs
    * Improve cloudi_core variable names

2019-12-04 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_map_reduce name argument for the
      suspend/resume service name
    * Fix CloudI Service API services_suspend interaction with
      services_update

2019-11-30 Michael Truog   <mjtruog at protonmail dot com>

    * Add the CloudI Service API services_suspend and services_resume
      functions to pause the processing of incoming service messages
    * Fix cloudi_service_shell directory setting when
      user is provided with login as true
    * Add cloudi_service_map_reduce suspend/resume functionality

2019-11-28 Michael Truog   <mjtruog at protonmail dot com>

    * CloudI version 1.8.0 released

2019-11-27 Michael Truog   <mjtruog at protonmail dot com>

    * Remove deprecated types from Python and Python/C CloudI API
    * Remove deprecated type value in cloudi Erlang module

2019-11-26 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_shell setting env for login su shell
