@@ -3492,6 +3492,7 @@ duo_mode_loop_init(#state_duo{duo_mode_pid = DuoModePid,
             end,
             {DispatcherProcessDictionaryNew,
              #state{recv_timeouts = RecvTimeouts,
+                    suspended = Suspended,
                     queue_requests = QueueRequests,
                     queued = Queued,
                     queued_info = QueuedInfo,
@@ -3509,6 +3510,7 @@ duo_mode_loop_init(#state_duo{duo_mode_pid = DuoModePid,
                     % only relevant to the duo_mode pid
                     StateNext = State#state_duo{
                         recv_timeouts = RecvTimeouts,
+                        suspended = Suspended,
                         queue_requests = QueueRequests,
                         queued = Queued,
                         queued_info = QueuedInfo,
