@@ -1,6 +1,12 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2019-12-27 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Fix suspended service time tracking
+    * Add suspend-related CloudI Service API services_status data
+      to the Erlang type specifications
+
 2019-12-07 Michael Truog   <mjtruog at protonmail dot com>
 
     * Add suspend-related information to the CloudI Service API
